# qpp

./: .Makefile.g++.swp  .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGES  CHANGES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  DISCREPANCIES.md  Dockerfile  Doxyfile  INSTALL.md  LICENSE  LICENSE.txt  Makefile  Makefile.clang++  Makefile.g++  Makefile.linux  Makefile.noMATLAB  Makefile.osx.clang++  Makefile.solaris  README.md  RELEASE.md  VERSION  VERSION.txt  appveyor.yml  benchmark.old.txt  benchmark.txt  cl  cmath_cygwin.patch  discrepancies.md  example.cpp  index.html  main.cpp  (+14 more)
.appveyor/: appveyor_build.bat  appveyor_test.bat
.circleci/: config.yml
Makefile.examples/: Makefile.clang++
Makefiles/: Makefile.MATLAB.clang++  Makefile.MATLAB.g++
VisualStudio/: .gitignore  Quantum++.sln  VisualStudio.sln
benchmarks/: CMakeLists.txt  README.md
benchmarks/include/: openmp_utils.hpp
benchmarks/src/: apply_ctrl_fan_psi_bench.cpp  apply_ctrl_fan_rho_bench.cpp  apply_ctrl_psi_bench.cpp  apply_ctrl_rho_bench.cpp  apply_psi_bench.cpp  apply_rho_bench.cpp  bench1.cpp  bench2.cpp  bricks_bench.cpp  measure_seq_psi_bench.cpp  measure_seq_rho_bench.cpp  ptrace_psi_bench.cpp  ptrace_rho_bench.cpp  ptranspose_psi_bench.cpp  ptranspose_rho_bench.cpp  qft.cpp  qft_bench.cpp  syspermute_psi.cpp  syspermute_psi_bench.cpp  syspermute_rho_bench.cpp  tfq.cpp  tfq_bench.cpp
cmake/: examples.cmake  pybind11.cmake  pyqpp.cmake  (+16 more)
examples/: BB84.cpp  CMakeLists.txt  GHZ.cpp  GHZtoBell.cpp  README.md  _test.cpp  bb84.cpp  bell_inequalities.cpp  channels.cpp  dense_coding.cpp  entanglement.cpp  entropies.cpp  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  example.cpp  exceptions  exceptions.cpp  exceptions.txt  experimental_average.cpp  functor.cpp  gates_states  gates_states.cpp  gates_states.txt  gram_schmidt.cpp  graph_states.cpp  grover.cpp  hhl.cpp  input_output  input_output.cpp  input_output.txt  layouts.cpp  matlab.cpp  matlab_io.cpp  measurements  measurements.cpp  measurements.txt  (+35 more)
examples/circuits/: conditional_if.cpp  conditional_while.cpp  hhl_circuit.cpp  noisy_teleport_qubit_circuit.cpp  post_selection.cpp  qpe_circuit.cpp  quantum_phase_estimation.cpp  runtime_set_dits.cpp  teleport_qubit_circuit.cpp  teleport_qudit_circuit.cpp
examples/circuits/qasm/: qasm1.cpp  qasm2.cpp  teleport_minimal.qasm
examples/qasm/: bell.qasm  coin_flip.qasm  qasm.cpp  qasm1.cpp  qasm2.cpp  qasm_teleport_minimal.cpp  qpp_qasm.cpp  qpp_qasm_sample.cpp  teleport_minimal.cpp  teleport_minimal.qasm  teleport_minimal_qasm.cpp
examples/standalone/: CMakeLists.txt
examples/standalone/src/: main.cpp
pyqpp/: CMakeLists.txt  README.md  __init__.py  qpp_wrapper.cpp
pyqpp/examples/: README.md  minimal.py  teleport.py
pyqpp/include/: constants_bind.hpp  functions_bind.hpp  instruments_bind.hpp  pyqpp_common.h  pyqpp_specific_bind.hpp  random_bind.hpp  types_bind.hpp
pyqpp/include/classes/: circuits_bind.hpp  engines_bind.hpp  gates_bind.hpp  reversible_bind.hpp  states_bind.hpp
pyqpp/include/classes/circuits/: circuits_bind.hpp  engines_bind.hpp
pyqpp/include/pyqpp/: constants_bind.hpp  entanglement_bind.hpp  entropies_bind.hpp  functions_bind.hpp  input_output_bind.hpp  instruments_bind.hpp  number_theory_bind.hpp  operations_bind.hpp  pyqpp_common.h  pyqpp_common.hpp  pyqpp_specific_bind.hpp  random_bind.hpp  statistics_bind.hpp  types_bind.hpp
pyqpp/include/pyqpp/classes/: circuits_bind.hpp  codes_bind.hpp  engines_bind.hpp  gates_bind.hpp  qcircuit_bind.hpp  qdummy_engine_bind.hpp  qengine_bind.hpp  qnoisy_engine_bind.hpp  random_devices_bind.hpp  reversible_bind.hpp  states_bind.hpp
pyqpp/include/pyqpp/qasm/: qasm_bind.hpp
pyqpp/include/qasm/: qasm_bind.hpp
pyqpp/python/pyqpp/: __init__.py  __init__.pyi  _pyqpp.pyi  codes.py  codes.pyi  gates.py  gates.pyi  qasm.py  qasm.pyi  random_devices.py  random_devices.pyi  states.py  states.pyi
pyqpp/src/: constants_bind.cpp  functions_bind.cpp  instruments_bind.cpp  pyqpp.cpp  pyqpp_specific_bind.cpp  qpp_wrapper.cpp  random_bind.cpp
pyqpp/src/classes/: gates_bind.cpp  reversible_bind.cpp  states_bind.cpp
pyqpp/src/classes/circuits/: circuits_bind.cpp  engines_bind.cpp
pyqpp/src/qasm/: qasm_bind.cpp
src/: qpp.cpp  (+4 more)
stress_tests/: .gitignore  CMakeLists.txt  README.md  run.sh
stress_tests/python/: ptrace_qutip.py  qft_qiskit.py  qft_qutip.py
stress_tests/src/: ptrace.cpp  qft.cpp  qft_circuit.cpp  syspermute.cpp
unit_tests/: .gitignore  CMakeLists.txt  functions.cpp  number_theory.cpp  operations.cpp  test.cpp  testing.cpp  testing_main.cpp
unit_tests/lib/googletest-release-1.10.0/: CMakeLists.txt
unit_tests/lib/googletest-release-1.10.0/googlemock/: CMakeLists.txt
unit_tests/lib/googletest-release-1.10.0/googletest/: CMakeLists.txt  README.md
unit_tests/lib/googletest-release-1.10.0/googletest/src/: gtest-port.cc
unit_tests/src/: entanglement.cpp  entropies.cpp  functions.cpp  input_output.cpp  instruments.cpp  number_theory.cpp  operations.cpp  random.cpp  statistics.cpp  traits.cpp
unit_tests/src/classes/: gates.cpp  timer.cpp
unit_tests/tests/: CMakeLists.txt  entanglement.cpp  entropies.cpp  functions.cpp  input_output.cpp  instruments.cpp  issues.cpp  main.cpp  number_theory.cpp  operations.cpp  random.cpp  statistics.cpp  testing_main.cpp  traits.cpp
unit_tests/tests/MATLAB/: matlab.cpp
unit_tests/tests/classes/: circuits.cpp  engines.cpp  gates.cpp  layouts.cpp  noise.cpp  qcircuit.cpp  qdummy_engine.cpp  qengine.cpp  qnoisy_engine.cpp  random_devices.cpp  reversible.cpp  states.cpp  timer.cpp
unit_tests/tests/classes/circuits/: circuits.cpp  engines.cpp  layouts.cpp
unit_tests/tests/qasm/: qasm.cpp
unit_tests/tests/qasm/circuits/generic/: bigadder.qasm  inverseqft1.qasm  inverseqft2.qasm  ipea_3_pi_8.qasm  qelib1.inc  qft.qasm  qpt.qasm  rb.qasm  teleport.qasm  teleportv2.qasm
unit_tests/tests/qasm/circuits/units/: builtingates.qasm  mappedgates.qasm  nondestrmeas.qasm  reset.qasm  scinot.qasm  teleportation.qasm
(+2519 files in other folders)
