[build-system]
requires = [
    "numpy",
    "pybind11",
    "scikit-build-core",
    "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyqpp"
version = "7.0.0"
description = "Python 3 wrapper for Quantum++"
requires-python = ">=3.9"
readme = "pyqpp/README.md"
license = { text = "MIT" }
dependencies = [
    "numpy"
]

[project.urls]
homepage = "https://github.com/softwareqinc/qpp"
repository = "https://github.com/softwareqinc/qpp.git"

[tool.scikit-build]
cmake.minimum-version = "3.20"
cmake.verbose = true

# Optional: expand universal macOS wheel tags
wheel.expand-macos-universal-tags = true
