[build-system]
requires = [
    "numpy",
    "pybind11",
    "pybind11-stubgen",
    "scikit-build-core",
    "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyqpp"
version = "7.0.0"
description = "Python 3 wrapper for Quantum++"
requires-python = ">=3.9"
readme = "pyqpp/README.md"
license = { text = "MIT" }
dependencies = [
    "numpy",
]

[project.urls]
homepage = "https://github.com/softwareqinc/qpp"
repository = "https://github.com/softwareqinc/qpp.git"

[tool.scikit-build]
cmake.source-dir = "pyqpp"
wheel.packages = ["pyqpp"]
wheel.exclude = [
    "include",
    "src",
    "CMakeLists.txt",
    "README.md",
]
wheel.expand-macos-universal-tags = true
