[project]
name = "pyqpp"
version = "7.0.1"
description = "Python 3 bindings for Quantum++"
readme = "pyqpp/README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
dependencies = [
  "numpy",
]

[project.urls]
homepage = "https://github.com/softwareqinc/qpp"
repository = "https://github.com/softwareqinc/qpp.git"

[build-system]
requires = [
  "numpy",
  "pybind11",
  "pybind11-stubgen",
  "scikit-build-core",
  "wheel",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.define = { __INTERNAL_PYQPP_SCIKIT_BUILD__ = true }
install.components = ["python"]
wheel.packages = ["pyqpp/python/pyqpp"]
wheel.expand-macos-universal-tags = true
